--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,11 @@
 /node_modules
 /build
+
+#awsmobilejs
+appsync-info.json
+aws-info.json
+project-info.json
+aws-exports.*
+awsmobilejs/.awsmobile/backend-build
+awsmobilejs/\#current-backend-info
+~awsmobilejs-*/
