--- a/awsmobilejs/backend/mobile-hub-project.yml
+++ b/awsmobilejs/backend/mobile-hub-project.yml
@@ -14,6 +14,7 @@ features:
       sign-in-user-pools: !com.amazonaws.mobilehub.v0.UserPoolsIdentityProvider 
         attributes:
           alias-attributes:
+            - preferred_username
             - email
           mfa-configuration: OFF
           name: userpool
@@ -21,8 +22,9 @@ features:
             min-length: '8'
             require-lower-case: true
             require-numbers: true
-            require-symbols: false
+            require-symbols: true
             require-upper-case: true
+          standard-attributes: '[]'
   user-files: !com.amazonaws.mobilehub.v0.UserFiles 
     attributes:
       enabled: true
